--- a/landing.html
+++ b/landing.html
@@ -977,31 +977,31 @@ footer {
   <div class="features-grid">
     <div class="feature-card">
       <div class="feature-num">01</div>
-      <img class="feature-img" src="https://images.unsplash.com/photo-1536098561742-ca998e48cbcc?w=600&q=80" alt="Crime map">
+      <img class="feature-img" src="https://images.unsplash.com/photo-1586449480537-3a22cf98b04c?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Crime map">
       <h3>Interactive Crime Map</h3>
       <p>Visualize crime heatmaps, police districts, and ward boundaries. Powered by 2025 JCPD NIBRS data updated quarterly.</p>
     </div>
     <div class="feature-card">
       <div class="feature-num">02</div>
-      <img class="feature-img" src="https://images.unsplash.com/photo-1569336415962-a4bd9f69cd83?w=600&q=80" alt="Jersey City neighborhood">
+      <img class="feature-img" src="https://images.unsplash.com/photo-1608095476825-d4e0f916372f?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Jersey City neighborhood">
       <h3>Neighborhood Safety Scores</h3>
       <p>Every ward scored 0–100 based on verified crime data. See which neighborhoods are improving and how yours compares.</p>
     </div>
     <div class="feature-card">
       <div class="feature-num">03</div>
-      <img class="feature-img" src="https://images.unsplash.com/photo-1580582932707-520aed937b7b?w=600&q=80" alt="School">
+      <img class="feature-img" src="https://images.unsplash.com/photo-1497633762265-9d179a990aa6?q=80&w=3273&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="School">
       <h3>Schools & Daycares</h3>
       <p>Every public school, private school, and daycare plotted on the map. Know what's near any address before you move.</p>
     </div>
     <div class="feature-card">
       <div class="feature-num">04</div>
-      <img class="feature-img" src="https://images.unsplash.com/photo-1567967455389-e696c1a95d21?w=600&q=80" alt="Park">
+      <img class="feature-img" src="https://plus.unsplash.com/premium_photo-1681558921634-f73645bde42f?q=80&w=3770&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Park">
       <h3>Parks & Green Space</h3>
       <p>All 86 verified Jersey City parks mapped — from Lincoln Park to your neighborhood playground.</p>
     </div>
     <div class="feature-card">
       <div class="feature-num">05</div>
-      <img class="feature-img" src="https://images.unsplash.com/photo-1474487548417-781cb71495f3?w=600&q=80" alt="Subway transit">
+      <img class="feature-img" src="https://images.unsplash.com/photo-1614582222696-8027eeaa31e1?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Subway transit">
       <h3>PATH Stations & Transit</h3>
       <p>All four JC PATH stations mapped with service info. See transit access for any neighborhood instantly.</p>
     </div>
